syntax = "proto3";

import "google/protobuf/empty.proto";

option go_package = "./leftover";

service LeftoverService {
   rpc AddLeftover (LeftoverRequest) returns (google.protobuf.Empty) {}
   rpc GetLeftover (LeftoverIdentity) returns (Leftover) {} 
   rpc GetLeftovers (LeftoverQuery) returns (LeftoverResponse) {}
   rpc UpdateLeftover (Leftover) returns (google.protobuf.Empty) {}
   rpc DeleteLeftover (DeleteRequest) returns (google.protobuf.Empty) {}
}

message Point {
   double longitude = 1;
   double latitude = 2;
}

message Address {
   string street = 1;
   string district = 2;
   string city = 3;
   string province = 4;
   optional string state = 5;
   string country = 6;
}

message BoundingBox {
   Point top_left = 1;
   Point bottom_right = 2;
}

message Leftover {
   string id = 1;
   string owner_id = 2;
   string name = 3;
   string description = 4;
   string type = 5; // leftover type e.g. food, electronic...
   string imageUrl = 6;
   Point coordiantes = 7;
   Address address = 8;
}

message LeftoverRequest {
   string owner_id = 1;
   string name = 2;
   string description = 3;
   string type = 4;
   string imageUrl = 5;
   Point coordinates = 6;
   Address address = 7;
}

message LeftoverResponse {
   repeated Leftover items = 1;
}

message LeftoverIdentity {
   string id = 1;
}

message DeleteRequest {
   string id = 1;
   string owner_id = 2;
}

message LeftoverQuery {
   optional string id = 1;
   optional string name = 2;
   optional string owner_id = 3;
   optional string type = 4;
   BoundingBox bbox = 5;
}